RESOLVED FIXED118511
AX: WebKit doesn't map aria-sort=other on OS X
https://bugs.webkit.org/show_bug.cgi?id=118511
Summary AX: WebKit doesn't map aria-sort=other on OS X
James Craig
Reported 2013-07-09 09:44:42 PDT
WebKit doesn't map aria-sort=other on OS X. Not sure if this is a platform-specific problem or if it represents a WebCore internal bug as well. ARIA CR test case: https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported/roles-properties-supported-columnheader-aria-sort-other.html related to the original implementation bug 53842
Attachments
Patch. (4.84 KB, patch)
2013-09-24 16:00 PDT, Samuel White
no flags
Updated patch. (7.04 KB, patch)
2013-09-25 10:32 PDT, Samuel White
no flags
Radar WebKit Bug Importer
Comment 1 2013-07-09 09:45:18 PDT
James Craig
Comment 2 2013-07-09 09:50:11 PDT
ARIA CR Test Case 168
James Craig
Comment 3 2013-07-09 09:51:28 PDT
Expected AXSortDirection: AXUnknownSortDirection
Samuel White
Comment 4 2013-09-24 16:00:25 PDT
Created attachment 212513 [details] Patch. Added support for "other" aria-sort order per http://www.w3.org/TR/wai-aria/complete#aria-sort
chris fleizach
Comment 5 2013-09-24 16:13:52 PDT
It still doesn't seem that this exposes anything to the Mac platform
Samuel White
Comment 6 2013-09-24 16:27:00 PDT
(In reply to comment #5) > It still doesn't seem that this exposes anything to the Mac platform If you look at the -additionalAccessibilityAttributeNames method in WebAccessibilityObjectWrapperMac.mm you can see that we were determining NSAccessibilitySortDirectionAttribute inclusion by checking: m_object->sortDirection() != SortDirectionNone Previously, "other" would cause SortDirectionNone to be returned so an element would NOT expose AXSortDirection in this case. Your confusion means I should update the test to make this check more explicit. Thanks!
Samuel White
Comment 7 2013-09-25 10:32:49 PDT
Created attachment 212597 [details] Updated patch. Updated test to make it more clear when an element exposes AXSortDirection. Before this patch, elements with an aria-sort value of "other" would not expose AXSortDirection. With this patch these elements correctly expose this attribute and return a value of AXUnknownSortDirection.
WebKit Commit Bot
Comment 8 2013-09-25 11:19:51 PDT
Comment on attachment 212597 [details] Updated patch. Clearing flags on attachment: 212597 Committed r156409: <http://trac.webkit.org/changeset/156409>
WebKit Commit Bot
Comment 9 2013-09-25 11:19:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.