AX: WebKit doesn't map aria-sort=other on OS X https://bugs.webkit.org/show_bug.cgi?id=118511

Patch by Sam White <samuel_white@apple.com> on 2013-09-25
Reviewed by Chris Fleizach.

Source/WebCore:

No new tests, updated existing aria-sort test to validate addition of "other"
sort order per http://www.w3.org/TR/wai-aria/complete#aria-sort.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::sortDirection):
* accessibility/AccessibilityObject.h:

LayoutTests:

Updated test to check "other" aria-sort order. Also added additional checks to
determine which elements expose aria-sort so our "none" case is more clear.

* accessibility/aria-sort-expected.txt:
* accessibility/aria-sort.html:

Canonical link: https://commits.webkit.org/139914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156409 268f45cc-cd09-0410-ab3c-d52691b4dbfc